--- a/src/site/notes/2022-12-27.md
+++ b/src/site/notes/2022-12-27.md
@@ -2,4 +2,4 @@
 {"dg-publish":true,"permalink":"/2022-12-27/"}
 ---
 
-This page was last modified at `$= dv.current().file.mtime`.
+This page was last modified at <%+ tp.file.last_modified_date("dddd Do MMMM YYYY HH:mm:ss") %>.
